--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,10 @@
 # The URL the site will be built for
 base_url = "https://simulacre-9to.netlify.app/"
 
+#metadata
+title = "Simulacre"
+description  = "hoge"
+
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
