--- a/config.toml
+++ b/config.toml
@@ -20,5 +20,5 @@ highlight_code = true
 [extra]
 # Put all your custom variables here
 hyde_links = [
-    {url = "$base_url/blog", name = "Blog"},
+    {url = "/blog", name = "Blog"},
 ]
