--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,8 @@ highlight_code = true
 
 [extra]
 # Put all your custom variables here
+hyde_sticky = true
+hyde_reverse = true
 hyde_links = [
     {url = "/blog", name = "Blog"},
 ]
