20/06/22の日記更新

--- a/config.toml
+++ b/config.toml
@@ -24,5 +24,6 @@ hyde_reverse = true
 hyde_links = [
     {url = "/blog", name = "Blog"},
     {url = "/tags", name = "Tags"},
+    {url = "links", name = "Links"},
     {url = "https://twitter.com/logout", name = "How to learn everything"}
 ]
