--- a/themes/hyde/config.toml
+++ b/themes/hyde/config.toml
@@ -3,6 +3,10 @@ compile_sass = true
 title = "Hyde theme"
 description = "A clean blogging theme"
 generate_feed = true
+# Optional: enable tags
+taxonomies = [
+    {name = "tags"}
+]
 
 [extra]
 hyde_sticky = true
